S07-S08: sound event registration and guarded playback
- VaultModifierAlerts: DeferredRegister<SoundEvent> for vault_modifier_alerts:temporal_expired wired on the mod event bus.
- sounds.json uses name vault_modifier_alerts:vault/temporal_expired so the file resolves to the README drop path assets/vault_modifier_alerts/sounds/vault/temporal_expired.ogg (refs DEC-013; Sound.getPath() prepends sounds/ to the name path).
- AlertSoundPlayer: tryParse -> ForgeRegistries lookup; unregistered/malformed id logs once (rate-limited) and no-ops; plays SimpleSoundInstance.forUI on the client thread; volume=0 safe.
- en_us.json subtitle for vault_modifier_alerts.subtitle.temporal_expired.
- DECISIONS.md: full F1 decision log (DEC-001..DEC-013 statuses current).